@@ -35,7 +35,6 @@ lib/Psh/Strategy/Auto_resume.pm
 lib/Psh/Strategy/Bang.pm
 lib/Psh/Strategy/Brace.pm
 lib/Psh/Strategy/Built_in.pm
-lib/Psh/Strategy/Comment.pm
 lib/Psh/Strategy/Debug.pm
 lib/Psh/Strategy/Eval.pm
 lib/Psh/Strategy/Executable.pm
